--- a/css/style.scss
+++ b/css/style.scss
@@ -15,46 +15,76 @@
 html{
     body{
         font-family: 'Lato', sans-serif;
-        .header{
-            margin-top:33px;
-            .header__wrapper{
-                display:flex;
-                justify-content: space-between;
-                align-items:center;
-                .header__left-side{
+        .start{
+            background: #E5E5E5;
+            .header{
+                height:500px;
+                padding-top:33px;
+                .header__wrapper{
                     display:flex;
+                    justify-content: space-between;
                     align-items:center;
-                    .header__logo{
-                        padding-bottom:10px;
-                    }
-                    .header__catalog{
-                        font-family: 'Lato', sans-serif;
-                        border: 1px solid #A5A5A5;
-                        margin-left:54px;
-                        border-radius: 5px;
-                        background: #E5E5E5;
-                        padding:12px 27px 14px 20px;
-                        font-size: 16px;
-                        line-height: 19px;
-                        color: #A5A5A5;
-                        .header__text{
-                            padding-right:6px;
-                        }
-                    }
-                }
-                .header__right-side{
-                    display:flex;
-                    .header__list{
+                    border-bottom: 1px solid black;
+                    padding-bottom:31px;
+                    .header__left-side{
                         display:flex;
-                        list-style:none;
                         align-items:center;
-                        .header__item{
-                            margin-right:33px;
+                        .header__logo{
+                            padding-bottom:10px;
+                        }
+                        .header__catalog{
+                            font-family: 'Lato', sans-serif;
+                            border: 1px solid #A5A5A5;
+                            margin-left:54px;
+                            border-radius: 5px;
+                            background: #E5E5E5;
+                            padding:12px 27px 14px 20px;
+                            font-size: 16px;
+                            line-height: 19px;
+                            color: #A5A5A5;
+                            .header__text{
+                                padding-right:6px;
+                            }
                         }
                     }
-                }
-                .header__enter{
-                    font-family: 'Lato', sans-serif;
+                    .header__right-side{
+                        display:flex;
+                        .header__list{
+                            display:flex;
+                            list-style:none;
+                            align-items:center;
+                            .header__item{
+                                margin-right:33px;
+                                &:hover{
+                                    border-bottom:2px solid #E30613;
+                                }
+                                .header__link{
+                                    text-decoration: none;
+                                    font-weight: 400;
+                                    font-size: 16px;
+                                    line-height: 19px;
+                                    color: #79818C;
+                                    &:hover{
+                                        color: #333333;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .header__enter{
+                        font-family: 'Lato', sans-serif;
+                        background: #E30613;
+                        border-radius: 5px;
+                        padding:12px 20px 14px 20px;
+                        border:0px;
+                        .header__link{
+                            color:white;
+                            text-decoration:none;
+                            font-weight: bold;
+                            font-size: 16px;
+                            line-height: 19px;
+                        }
+                    }
                 }
             }
         }
