--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,8 @@
   padding: 0px;
 }
 
-.wrapper-lg {
-  max-width: 1170px;
-  margin: 0 auto;
-}
-
-.wrapper-sm {
-  max-width: 1138px;
+.container {
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -19,43 +14,16 @@ html body {
   font-family: 'Lato', sans-serif;
 }
 
-html body .start {
-  background: #E5E5E5;
-}
-
-html body .start .header {
+html body .header {
   height: 500px;
   padding-top: 33px;
 }
 
-html body .start .header .header__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-bottom: 1px solid black;
-  padding-bottom: 31px;
-}
-
-html body .start .header .header__wrapper .header__left-side {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-html body .start .header .header__wrapper .header__left-side .header__logo {
+html body .header .header__left-side .header__logo {
   padding-bottom: 10px;
 }
 
-html body .start .header .header__wrapper .header__left-side .header__catalog {
+html body .header .header__left-side .header__catalog {
   font-family: 'Lato', sans-serif;
   border: 1px solid #A5A5A5;
   margin-left: 54px;
@@ -67,35 +35,36 @@ html body .start .header .header__wrapper .header__left-side .header__catalog {
   color: #A5A5A5;
 }
 
-html body .start .header .header__wrapper .header__left-side .header__catalog .header__text {
+html body .header .header__left-side .header__catalog .header__text {
   padding-right: 6px;
 }
 
-html body .start .header .header__wrapper .header__right-side {
+html body .header .header__right-side {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-html body .start .header .header__wrapper .header__right-side .header__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-html body .start .header .header__wrapper .header__right-side .header__list .header__item {
+html body .header .header__right-side .header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  margin-top: 10px;
+}
+
+html body .header .header__right-side .header__list .header__item {
   margin-right: 33px;
 }
 
-html body .start .header .header__wrapper .header__right-side .header__list .header__item:hover {
+html body .header .header__right-side .header__list .header__item:hover {
   border-bottom: 2px solid #E30613;
 }
 
-html body .start .header .header__wrapper .header__right-side .header__list .header__item .header__link {
+html body .header .header__right-side .header__list .header__item .header__link {
   text-decoration: none;
   font-weight: 400;
   font-size: 16px;
@@ -103,19 +72,20 @@ html body .start .header .header__wrapper .header__right-side .header__list .hea
   color: #79818C;
 }
 
-html body .start .header .header__wrapper .header__right-side .header__list .header__item .header__link:hover {
+html body .header .header__right-side .header__list .header__item .header__link:hover {
   color: #333333;
 }
 
-html body .start .header .header__wrapper .header__enter {
+html body .header .header__right-side .header__enter {
   font-family: 'Lato', sans-serif;
   background: #E30613;
   border-radius: 5px;
   padding: 12px 20px 14px 20px;
   border: 0px;
+  display: inline;
 }
 
-html body .start .header .header__wrapper .header__enter .header__link {
+html body .header .header__right-side .header__enter .header__link {
   color: white;
   text-decoration: none;
   font-weight: bold;
