--- a/css/style.scss
+++ b/css/style.scss
@@ -3,87 +3,74 @@
     margin:0px;
     padding:0px;
 }
-.wrapper-lg{
-    max-width:1170px;
+
+.container{
+    max-width:1200px;
     margin:0 auto;
 }
 
-.wrapper-sm{
-    max-width:1138px;
-    margin:0 auto;
-}
 html{
     body{
         font-family: 'Lato', sans-serif;
-        .start{
-            background: #E5E5E5;
             .header{
                 height:500px;
                 padding-top:33px;
-                .header__wrapper{
-                    display:flex;
-                    justify-content: space-between;
-                    align-items:center;
-                    border-bottom: 1px solid black;
-                    padding-bottom:31px;
-                    .header__left-side{
-                        display:flex;
-                        align-items:center;
-                        .header__logo{
-                            padding-bottom:10px;
-                        }
-                        .header__catalog{
-                            font-family: 'Lato', sans-serif;
-                            border: 1px solid #A5A5A5;
-                            margin-left:54px;
-                            border-radius: 5px;
-                            background: #E5E5E5;
-                            padding:12px 27px 14px 20px;
-                            font-size: 16px;
-                            line-height: 19px;
-                            color: #A5A5A5;
-                            .header__text{
-                                padding-right:6px;
-                            }
-                        }
+                .header__left-side{
+                    .header__logo{
+                        padding-bottom:10px;
                     }
-                    .header__right-side{
-                        display:flex;
-                        .header__list{
-                            display:flex;
-                            list-style:none;
-                            align-items:center;
-                            .header__item{
-                                margin-right:33px;
-                                &:hover{
-                                    border-bottom:2px solid #E30613;
-                                }
-                                .header__link{
-                                    text-decoration: none;
-                                    font-weight: 400;
-                                    font-size: 16px;
-                                    line-height: 19px;
-                                    color: #79818C;
-                                    &:hover{
-                                        color: #333333;
-                                    }
-                                }
-                            }
-                        }
-                    }
-                    .header__enter{
+                    .header__catalog{
                         font-family: 'Lato', sans-serif;
-                        background: #E30613;
+                        border: 1px solid #A5A5A5;
+                        margin-left:54px;
                         border-radius: 5px;
-                        padding:12px 20px 14px 20px;
-                        border:0px;
-                        .header__link{
-                            color:white;
-                            text-decoration:none;
-                            font-weight: bold;
-                            font-size: 16px;
-                            line-height: 19px;
+                        background: #E5E5E5;
+                        padding:12px 27px 14px 20px;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #A5A5A5;
+                        .header__text{
+                            padding-right:6px;
                         }
+                    }
+                }
+        .header__right-side{
+            display:flex;
+            align-items:center;
+            .header__list{
+                display:flex;
+                list-style:none;
+                margin-top:10px;
+                .header__item{
+                    margin-right:33px;
+                    &:hover{
+                        border-bottom:2px solid #E30613;
+                    }
+                    .header__link{
+                        text-decoration: none;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 19px;
+                        color: #79818C;
+                        &:hover{
+                            color: #333333;
+                        }
+                    }
+                }
+            }
+                .header__enter{
+                    font-family: 'Lato', sans-serif;
+                    background: #E30613;
+                    border-radius: 5px;
+                    padding:12px 20px 14px 20px;
+                    border:0px;
+                    display:inline;
+                    .header__link{
+                        color:white;
+                        text-decoration:none;
+                        font-weight: bold;
+                        font-size: 16px;
+                        line-height: 19px;
                     }
                 }
             }
