--- a/css/style.scss
+++ b/css/style.scss
@@ -12,6 +12,7 @@
 html{
     body{
         font-family: 'Lato', sans-serif;
+        background: #E5E5E5;
         .header{
             padding-top:33px;
             .container{
@@ -112,6 +113,9 @@ html{
                     }
                 }
             }
+        }
+        .rise{
+            
         }
     }
 }
