--- a/css/style.css
+++ b/css/style.css
@@ -130,4 +130,44 @@ html body .rise .container .row .col-md-8 .rise__title {
   line-height: 50px;
   color: #333333;
 }
+
+html body .rise .container .row .col-md-4 .rise__wrapper .rice__pic {
+  width: 100%;
+}
+
+html body .variables {
+  background: white;
+}
+
+html body .variables .container .row .variables__list {
+  list-style: none;
+}
+
+html body .variables .container .row .variables__list .variables__item {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #A5A5A5;
+}
+
+html body .variables .container .variables__row-1 {
+  padding-top: 60px;
+  margin-bottom: 37px;
+}
+
+html body .variables .container .variables__row-1 .variables__list {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+html body .variables .container .variables__row-2 {
+  padding-bottom: 60px;
+}
+
+html body .variables .container .variables__row-2 .variables__list {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 /*# sourceMappingURL=style.css.map */
