--- a/css/style.scss
+++ b/css/style.scss
@@ -137,6 +137,7 @@ html{
         }
         .variables{
             background:white;
+            margin-bottom:60px;
             .container{
                 .row{
                     .col-md-9{
@@ -152,6 +153,9 @@ html{
                                     font-size: 16px;
                                     line-height: 19px;
                                     color: #A5A5A5;
+                                    &:hover{
+                                        color:black;
+                                    }
                                 }
                             }
                         }
@@ -168,6 +172,132 @@ html{
                                 color: #A5A5A5;
                                 &:first-child{
                                     padding-bottom:20px;
+                                }
+                                &:hover{
+                                    color:black;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .skills{
+            margin-bottom:60px;
+            .container{
+                .row{
+                    .col-md-6{
+                        .skills__title{
+                            font-size: 36px;
+                            line-height: 44px;
+                            color: #333333;
+                            margin-bottom:52px;
+                        }
+                        .skills__offer{
+                            box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.2);
+                            background-color:white;
+                            padding:33px 33px 33px 44px;
+                            .skills__head{
+                                display:flex;
+                                justify-content: space-between;
+                                .skills__name{
+                                    font-weight: 500;
+                                    font-size: 24px;
+                                    line-height: 29px;
+                                    .skills__plug{
+                                        display:block;
+                                    }
+                                }
+                                .skills__pic{
+                                    position:relative;
+                                    background: #E30613;
+                                    height:65px;
+                                    width:67px;
+                                    border-radius: 5px;
+                                    .skills__icon{
+                                        margin-left:20px;
+                                        margin-top:15px;
+                                    }
+                                    .skills__number{
+                                        font-weight: 500;
+                                        font-size: 12px;
+                                        line-height: 15px;
+                                        color:white;
+                                        margin-left:11px;
+                                    }
+                                }
+                            }
+                            .skills__text{
+                                font-weight: 500;
+                                font-size: 16px;
+                                line-height: 19px;
+                                letter-spacing: 0.01em;
+                                color: #A5A5A5;
+                            }
+                            .skills__record{
+                                text-decoration:none;
+                            }
+                        }
+                    }
+                    .col-md-6{
+                        .skills__outset{
+                            margin-top:18px;
+                            margin-bottom:55px;
+                            text-align:right;
+                            .skills__link{
+                                font-weight: 500;
+                                font-size: 16px;
+                                line-height: 19px;
+                                color:#CDCDCD;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .retraining{
+            .container{
+                .row{
+                    margin-bottom:52px;
+                    .col-md-7{
+                        .retraining__title{
+                            font-size: 36px;
+                            line-height: 44px;
+                        }
+                    }
+                }
+                .retraining__row-2{
+                    .col-md-4{
+                        .retraining__item{
+                            border: 1px solid #A5A5A5;
+                            border-radius: 5px;
+                            padding:38px 0px 35px 32px;
+                            .retraining__name{
+                                font-weight: 500;
+                                font-size: 18px;
+                                line-height: 22px;
+                                margin-bottom:18px;
+                            }
+                            .retraining__text{
+                                font-weight: 500;
+                                font-size: 16px;
+                                line-height: 19px;
+                                letter-spacing: 0.01em;
+                                color: #A5A5A5;
+                                margin-bottom:24px;
+                            }
+                            .retraining__more{
+                                border: 1px solid #A5A5A5;
+                                border-radius: 5px;
+                                padding:13px 19px;
+                                background:transparent;
+                                font-weight: 500;
+                                font-size: 16px;
+                                line-height: 19px;
+                                color: #A5A5A5;
+                                &:hover{
+                                    border: 1px solid #336FEF;
+                                    color: #336FEF;
                                 }
                             }
                         }
