--- a/css/style.css
+++ b/css/style.css
@@ -315,9 +315,52 @@ html body .retraining .container .retraining__row-2 .col-md-4 .retraining__item 
   color: #336FEF;
 }
 
+html body .teaching {
+  margin-bottom: 96px;
+}
+
 html body .teaching .container .row .col-md-7 .teaching__title {
   font-size: 36px;
   line-height: 44px;
   color: #333333;
+}
+
+html body .teaching .container .row .col-md-6 .teaching__item .teaching__pic {
+  background: #ECF1F7;
+  width: 200px;
+  height: 195px;
+}
+
+html body .teaching .container .row .col-md-6 .teaching__item .teaching__info {
+  padding: 37px 0px 0px 24px;
+  background: white;
+  padding-right: 137px;
+}
+
+html body .teaching .container .row .col-md-6 .teaching__item .teaching__info .teaching__name {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+html body .teaching .container .row .col-md-6 .teaching__item .teaching__info .teaching__text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #A5A5A5;
+}
+
+html body .teaching .container .row .col-md-6 .teaching__item .teaching__info .teaching__more {
+  font-size: 16px;
+  line-height: 19px;
+  color: #336FEE;
+  border: 0px;
+  border-radius: 5px;
+  padding: 13px 19px;
+}
+
+html body .teaching .container .teaching__row-2 {
+  margin-top: 52px;
+  margin-bottom: 28px;
 }
 /*# sourceMappingURL=style.css.map */
