--- a/css/style.scss
+++ b/css/style.scss
@@ -9,8 +9,13 @@
     margin:0 auto;
 }
 
+h3{
+    color: #333333;
+}
+
 html{
     body{
+        
         font-family: 'Lato', sans-serif;
         background: #E5E5E5;
         .header{
@@ -122,7 +127,6 @@ html{
                         .rise__title{
                             font-size: 48px;
                             line-height:50px;
-                            color: #333333;
                         }
                     }
                     .col-md-4{
@@ -153,8 +157,9 @@ html{
                                     font-size: 16px;
                                     line-height: 19px;
                                     color: #A5A5A5;
+                                    cursor: pointer;
                                     &:hover{
-                                        color:black;
+                                        color: #333333;
                                     }
                                 }
                             }
@@ -353,6 +358,49 @@ html{
                 .teaching__row-2{
                     margin-top:52px;
                     margin-bottom:28px;
+                }
+            }
+        }
+        .systemic{
+            background-color:white;
+            .container{
+                .row{
+                    .col-md-7{
+                        .systemic__title{
+                            font-weight: normal;
+                            font-size: 36px;
+                            line-height: 44px;
+                        }
+                    }
+                }
+                .systemic__row-1{
+                    padding-top:71px;
+                    margin-bottom:55px;
+                }
+                .systemic__row-2{
+                    margin-bottom:55px;
+                    .col{
+                        .owl-carousel{
+                            .item{
+                                .systemic__wrapper{
+                                    background: #F6F6F6;
+                                    border-radius:5px;
+                                    .systemic__pic{                   
+                                        background: #D2D2D2;
+                                        border-radius:5px 5px 0px 0px;
+                                    }
+                                    .systemic__info{
+                                        padding:48px 0px 54px 30px;
+                                        .systemic__text{
+                                            font-size: 24px;
+                                            line-height: 29px;
+                                            color: #333333;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
