--- a/css/style.scss
+++ b/css/style.scss
@@ -381,15 +381,19 @@ html{
                     margin-bottom:55px;
                     .col{
                         .owl-carousel{
+                            
                             .item{
                                 .systemic__wrapper{
+                                    height:487px;
                                     background: #F6F6F6;
                                     border-radius:5px;
                                     .systemic__pic{                   
                                         background: #D2D2D2;
                                         border-radius:5px 5px 0px 0px;
+                                        height:347px;
                                     }
                                     .systemic__info{
+                                     
                                         padding:48px 0px 54px 30px;
                                         .systemic__text{
                                             font-size: 24px;
