--- a/css/style.scss
+++ b/css/style.scss
@@ -364,6 +364,7 @@ html{
         .systemic{
             background-color:white;
             position: relative;
+            padding-bottom:118px;
             .container{
                 .row{
                     .col-md-7{
@@ -379,7 +380,6 @@ html{
                     margin-bottom:55px;
                 }
                 .systemic__row-2{
-                    margin-bottom:55px;
                     .col{
                         position:static;
                         .owl-carousel{
